--- a/Web-Project-Main/Web-Project-New-main/FRONT_END/Login.html
+++ b/Web-Project-Main/Web-Project-New-main/FRONT_END/Login.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Head section linking stylesheets, Bootstrap, Boxicons, and setting page metadata for the Login page -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +63,7 @@
         <div>
             <h3>Contact</h3>
             <p>Email: support@universalmarket.com</p>
-            <p>Phone: (555) 123-4567</p>
+            <p>Phone: (+251) 912-345-678</p>
         </div>
     </div>
     <hr>
