--- a/Web-Project-Main/Web-Project-New-main/FRONT_END/Marketplace.html
+++ b/Web-Project-Main/Web-Project-New-main/FRONT_END/Marketplace.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Head section linking stylesheets, Bootstrap, Boxicons, and setting page metadata for the Products page -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,12 +32,10 @@
     <!-- Wrapped aside and main-body in a flex container -->
     <div class="main-content">
         <section class="Aside">
-            <!-- Moved search section above categories -->
             <div class="search-section">
                 <h3>Search Products</h3>
                 <div class="search-container">
                     <input type="text" id="searchInput" placeholder="Search products..." class="search-input">
-                    <!-- Made search button look like other filter buttons -->
                     <button onclick="performSearch()" class="search-btn">Search</button>
                 </div>
             </div>
@@ -88,58 +88,6 @@
                 </div>
             </div>
             
-            <!-- Made sample products display side by side in a grid -->
-           <!-- <div class="sample-products">
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 1">
-                    <h3>Sample Product 1</h3>
-                    <p class="category">Electronics</p>
-                    <p class="price">299.99 ETB</p>
-                    <p class="description">High-quality electronic device with advanced features</p>
-                    <button>Add to cart</button>
-                </div>
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 2">
-                    <h3>Sample Product 2</h3>
-                    <p class="category">Clothing</p>
-                    <p class="price">49.99 ETB</p>
-                    <p class="description">Comfortable and stylish clothing item</p>
-                    <button>Add to cart</button>
-                </div>
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 3">
-                    <h3>Sample Product 3</h3>
-                    <p class="category">Home Goods</p>
-                    <p class="price">79.99 ETB</p>
-                    <p class="description">Essential home item for everyday use</p>
-                    <button>Add to cart</button>
-                </div>
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 4">
-                    <h3>Sample Product 4</h3>
-                    <p class="category">Vehicles</p>
-                    <p class="price">15,999.99 ETB</p>
-                    <p class="description">Reliable vehicle in excellent condition</p>
-                    <button>Add to cart</button>
-                </div>
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 5">
-                    <h3>Sample Product 5</h3>
-                    <p class="category">Cosmetics</p>
-                    <p class="price">24.99 ETB</p>
-                    <p class="description">Premium beauty product for daily use</p>
-                    <button>Add to cart</button>
-                </div>
-                <div class="sample-product">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Sample Product 6">
-                    <h3>Sample Product 6</h3>
-                    <p class="category">Real Estate</p>
-                    <p class="price">250,000.00 ETB</p>
-                    <p class="description">Beautiful property in prime location</p>
-                    <button>Add to cart</button>
-                </div>
-            </div>
-        -->
         </section>
     </div>
     <footer>
