--- a/Web-Project-Main/Web-Project-New-main/FRONT_END/Signup.html
+++ b/Web-Project-Main/Web-Project-New-main/FRONT_END/Signup.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    
+<!-- Head section linking stylesheets, Bootstrap, Boxicons, and setting page metadata for the Signup page -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
