--- a/Web-Project-Main/Web-Project-New-main/FRONT_END/index.html
+++ b/Web-Project-Main/Web-Project-New-main/FRONT_END/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Head section linking stylesheets, Bootstrap, Boxicons, and setting page metadata for the Home page -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +56,6 @@
         <h2>Why Shop with us?</h2>
         <div class="cards">
             <div>
-                <!-- Made images bigger by updating the image paths and sizes -->
                 <img src="../Assets/security1.webp" alt="A lock 🔒 or shield" class="service-image">
                 <h3>Secure Payments</h3>
                 <p>256-bit SSL encryption and secure payment processing</p>
@@ -92,7 +93,7 @@
         <div>
             <h3>Contact</h3>
             <p>Email: support@universalmarket.com</p>
-            <p>Phone: (555) 123-4567</p>
+            <p>Phone: (+251) 912-345-678</p>
         </div>
     </div>
     <hr>
