edited the footer phone numbers

--- a/Web-Project-Main/Web-Project-New-main/FRONT_END/Sell.html
+++ b/Web-Project-Main/Web-Project-New-main/FRONT_END/Sell.html
@@ -86,7 +86,7 @@
             <div>
                 <h3>Contact</h3>
                 <p>Email: support@universalmarket.com</p>
-                <p>Phone: (555) 123-4567</p>
+                <p>Phone: (+251) 912-345-678</p>
             </div>
         </div>
         <hr>
